home page img carousel

--- a/style.css
+++ b/style.css
@@ -5,9 +5,18 @@ h1 {
   margin: 20px;
   text-align: center;
 }
-img {
+
+.carousel {
+  width:550px;
+  height: 410px;
+  align:center;
+  margin: 0 auto;
+}
+
+#CCimg {
   width:550px;
 }
+
 p, ol, ul {
   color: #595959;
 }
@@ -15,6 +24,7 @@ p, ol, ul {
 #intro {
   padding-left: 150px;
   padding-right: 150px;
+  padding-bottom: 45px;
 }
 .CCheads {
   padding-left: 35px;
@@ -50,6 +60,10 @@ p, ol, ul {
   border-color:#ffcce6;
 }
 
+.d-block{
+  width:100px;
+  height:100px;
+}
 
 
 #home {
