--- a/style.css
+++ b/style.css
@@ -60,6 +60,17 @@ p, ol, ul {
   border-color:#ffcce6;
 }
 
+.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
+.show > .btn-primary.dropdown-toggle {
+  background-color: #ffcce6;
+  border-color: #ffcce6;
+}
+
+.btn-primary:focus {
+  background-color: #ffcce6;
+  border-color: #ffcce6;
+}
+
 .d-block{
   width:100px;
   height:100px;
